--- a/code/manifest.json
+++ b/code/manifest.json
@@ -1,6 +1,7 @@
 {
     "name": "Lightning",
     "version": "1.0",
+    "default_locale": "en",
     "description": "Quick summoner search",
     "permissions": ["declarativeContent", "storage"],
     "background": {
