--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "8.5.1",
+    "body-parser": "^1.18.3",
     "d3": "5.4.0",
     "d3-axis": "1.0.8",
     "express": "^4.16.3",
